--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
   <body>
      <h1></h1>
 <img src="https://avatars.githubusercontent.com/u/102459859?v=4">
-
+     <ul>
+         <li>netflix</li>
+         <li>instagram</li>
+         <li>quora</li>
+     </ul>
   </body>
 
 </html>
