--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <img src="https://avatars.githubusercontent.com/u/102459859?v=4">
      <ul>
          <li>netflix</li>
-         <li>instagram</li>
+      <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
          <li>quora</li>
      </ul>
   </body>
